@@ -126,58 +126,56 @@ gchar *s = N_("String");
 gchar *s = N_("Search type");
 gchar *s = N_("Whole word");
 gchar *s = N_("Ignore case");
-gchar *s = N_("Search and Replace");
-gchar *s = N_("Search expression:");
-gchar *s = N_("Is the regular expression or simple string");
-gchar *s = N_("Regular expression");
+gchar *s = N_("Find & Replace");
+gchar *s = N_("Search Expression");
+gchar *s = N_("Regular Expression");
 gchar *s = N_("Greedy matching");
-gchar *s = N_("Give the search expression");
+gchar *s = N_("Case insensitive");
 gchar *s = N_("*");
 gchar *s = N_("Match at start of word");
 gchar *s = N_("Match complete lines");
 gchar *s = N_("Match complete words");
-gchar *s = N_("Case insensitive");
-gchar *s = N_("Search");
-gchar *s = N_("Search in:");
-gchar *s = N_("Search action:");
-gchar *s = N_("Search direction:");
-gchar *s = N_("The search target(s) where search will be performed");
+gchar *s = N_("Search Expression");
+gchar *s = N_("Search In");
+gchar *s = N_("Search Action");
+gchar *s = N_("*");
+gchar *s = N_("Search Direction");
 gchar *s = N_("*");
 gchar *s = N_("*");
 gchar *s = N_("*");
 gchar *s = N_("$(module.source.files) $(module.include.files)");
-gchar *s = N_("Search variable");
-gchar *s = N_("Choose files:");
+gchar *s = N_("Search Variable");
+gchar *s = N_("Choose Files");
 gchar *s = N_("Space-seperated list of file name patterns to match");
 gchar *s = N_("*");
 gchar *s = N_("*\\.*");
 gchar *s = N_("*.c *.cpp *.cxx *.cc *.C *.h *.H *.hh *.hxx *.hpp");
 gchar *s = N_("*.c *.cpp *.cxx *.cc *.C *.h *.H *.hh *.hxx *.hpp Makefile.am configure.* README AUTHORS ChangeLog *.m4");
-gchar *s = N_("Ignore files:");
+gchar *s = N_("Ignore Files");
 gchar *s = N_("Space-seperated list of file name patterns to ignore");
 gchar *s = N_("*");
 gchar *s = N_("*.so *.o *.a *.la");
-gchar *s = N_("Ignore hidden files:");
-gchar *s = N_("Ignore binary files");
-gchar *s = N_("Choose directories:");
+gchar *s = N_("Ignore Hidden Files");
+gchar *s = N_("Ignore Binary Files");
+gchar *s = N_("Choose Directories");
 gchar *s = N_("Space-seperated list of directory name patterns to match");
 gchar *s = N_("*");
-gchar *s = N_("Ignore directories:");
+gchar *s = N_("Ignore Directories");
 gchar *s = N_("Space-seperated list of directory name patterns to ignore");
 gchar *s = N_("*");
 gchar *s = N_("CVS");
 gchar *s = N_("CVS intl po");
-gchar *s = N_("Ignore hidden directories");
-gchar *s = N_("Search recursively");
-gchar *s = N_("File filter");
-gchar *s = N_("Max. actions");
-gchar *s = N_("*");
-gchar *s = N_("No limit");
-gchar *s = N_("Details");
-gchar *s = N_("Replace with:");
+gchar *s = N_("Ignore Hidden Directories");
+gchar *s = N_("Search Recursively");
+gchar *s = N_("File Filter");
+gchar *s = N_("Max. Actions");
+gchar *s = N_("No Limit");
+gchar *s = N_("Search Target");
+gchar *s = N_("Replace With");
 gchar *s = N_("*");
 gchar *s = N_("Expand regex back references");
 gchar *s = N_("Replace");
+gchar *s = N_("Replace Expression");
 gchar *s = N_("Search");
 gchar *s = N_("Anjuta help search");
 gchar *s = N_("*");
@@ -492,3 +490,4 @@ gchar *s = N_("*");
 gchar *s = N_("Default");
 gchar *s = N_("Use currently selected profile in GNOME terminal");
 gchar *s = N_("Terminal options");
+gchar *s = N_("Anjuta windows");
