@@ -269,6 +269,7 @@ struct _SettingsSubMenu
 	GtkWidget *commands;
 	GtkWidget *preferences;
 	GtkWidget *style_editor;
+	GtkWidget *windows_dialog;
 	GtkWidget *user_properties;
 	GtkWidget *default_preferences;
 	GtkWidget *shortcuts;
