@@ -1706,7 +1706,7 @@ static GnomeUIInfo cvs_menu_uiinfo[NUM_CVS_SUBMENUS+1] = {
 	 GNOMEUIINFO_END,
 };
 
-#define NUM_SETTINGS_SUBMENUS 10
+#define NUM_SETTINGS_SUBMENUS 11
 static GnomeUIInfo settings1_menu_uiinfo[NUM_SETTINGS_SUBMENUS+1] = {
 	{/*0*/
 	 GNOME_APP_UI_ITEM, N_("_Compiler and Linker Settings ..."),
@@ -1740,29 +1740,36 @@ static GnomeUIInfo settings1_menu_uiinfo[NUM_SETTINGS_SUBMENUS+1] = {
 	 GNOME_APP_PIXMAP_STOCK, GTK_STOCK_PROPERTIES,
 	 0, 0, NULL},
 	{/*6*/
+	 GNOME_APP_UI_ITEM, N_("Windows settings ..."),
+	 N_("Edit windows settings"),
+	 on_windows_settings_activate, NULL, NULL,
+	 GNOME_APP_PIXMAP_STOCK, GTK_STOCK_PROPERTIES,
+	 0, 0, NULL},
+	{/*7*/
 	 GNOME_APP_UI_ITEM, N_("_Edit user.properties file ..."),
 	 N_("Edit user properties file"),
 	 on_edit_user_properties1_activate, NULL, NULL,
 	 GNOME_APP_PIXMAP_STOCK, GTK_STOCK_PROPERTIES,
 	 0, 0, NULL},
-	{/*7*/
+	{/*8*/
 	 GNOME_APP_UI_ITEM, N_("Set _Default Preferences"),
 	 N_("But I prefer tea."),
 	 on_set_default_preferences1_activate, NULL, NULL,
 	 GNOME_APP_PIXMAP_STOCK, GTK_STOCK_PROPERTIES,
 	 0, 0, NULL},
-	{/*8*/
+	{/*9*/
 	 GNOME_APP_UI_ITEM, N_("C_ustomize shortcuts"),
 	 N_("Customize shortcuts associated with menu items"),
 	 on_customize_shortcuts_activate, NULL, NULL,
 	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
-	{/*9*/
+	{/*10*/
 	 GNOME_APP_UI_ITEM, N_("_Tools Editor"),
 	 N_("Customize user-defined tools"),
 	 on_tool_editor_activate, NULL, NULL,
 	 GNOME_APP_PIXMAP_NONE, NULL,
-	 0, 0, NULL},GNOMEUIINFO_END,/*8*/
+	 0, 0, NULL},
+	 GNOMEUIINFO_END,/*11*/
 };
 
 #define NUM_HELP_SUBMENUS 18
