@@ -202,6 +202,7 @@ void on_edit_user_properties1_activate (GtkMenuItem * menuitem,
 										gpointer user_data);
 void on_set_preferences1_activate (GtkMenuItem * menuitem, gpointer user_data);
 void on_set_style_editor_activate (GtkMenuItem * menuitem, gpointer user_data);
+void on_windows_settings_activate (GtkMenuItem * menuitem, gpointer user_data);
 void on_set_default_preferences1_activate (GtkMenuItem * menuitem,
 										   gpointer user_data);
 
