@@ -1,3 +1,15 @@
+2003-03-21  Naba Kumar  <naba@gnome.org>
+
+	* src/commands.c, src/src_paths.c, src/style-editor.c,
+	src/anjuta-tools.c: Added gtk_widget_show() calls for the dialogs
+	becuase they are now hidden by default (from glade editing).
+	
+	* anjuta.glade, anjuta_dialogs_strings.c, src/anjuta.c,
+	src/anjuta.h, src/main_menubar.c, src/main_menubar.h,
+	src/main_menubar_def.h, src/mainmenu_callbacks.c,
+	src/mainmenu_callbacks.h, src/windows-dialog.c: Implemented
+	basic windows managements.
+	
 2003-03-19  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
 	* tagmanager/*: Added ignore-list for symbols. This will make
 	parsing more accurate for projects. Doc updates needed.
